<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/status_card"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <TextView
                android:id="@+id/download_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download"
                android:textSize="18sp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/download_speed_view_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                android:layout_marginTop="60dp"/>

            <LinearLayout
                android:id="@+id/download_speed_view_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/download_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/download_speed_value_mbps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    tools:text="100.00 Mbps" />

                 <TextView
                    android:id="@+id/download_speed_value_mbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    tools:text="12.50 MB/s" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="@id/guideline" />

            <TextView
                android:id="@+id/upload_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:textSize="18sp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/upload_speed_view_layout"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"/>

            <LinearLayout
                android:id="@+id/upload_speed_view_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/upload_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="60dp">

                <TextView
                    android:id="@+id/upload_speed_value_mbps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    tools:text="100.00 Mbps" />

                 <TextView
                    android:id="@+id/upload_speed_value_mbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    tools:text="12.50 MB/s" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/network_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/status_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Connected via: Wi-Fi" />

    <ProgressBar
        android:id="@+id/speed_test_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:indeterminate="true"
        tools:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btn_analyze"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/analyze_wifi"
        android:textSize="18sp"
        android:backgroundTint="#194770"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/network_status_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/wifi_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_analyze" />


</androidx.constraintlayout.widget.ConstraintLayout>